@@ -16,9 +16,8 @@
  * Modified by Peter C. for Solaris Posix Threads.
  */
 
-# if defined(GC_SOLARIS_PTHREADS) || defined(GC_THREADS)
-# include "private/gc_priv.h"
-# endif
+#include "private/gc_priv.h"
+
 # if defined(GC_SOLARIS_PTHREADS)
 # include <pthread.h>
 # include <thread.h>
